# cheta

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cheta/: cli.py  config.json  gui.py
src/cheta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cheta/youtube/: youtube_fetcher.py
